fixing site logo stretch issue on mobile.

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -88,7 +88,8 @@ h2 {
 }
 
 #site-logo {
-    width: 200%;
+    width: 100%;
+    height: auto;
 }
 
 .site-head__inner {
@@ -105,6 +106,7 @@ h2 {
 
 .site-head__brand img {
     max-height: 3.125rem; /* 50px */
+    width: auto;
 }
 
 .site-head__nav {
@@ -137,7 +139,7 @@ li a.active {
     text-underline-offset: 10px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 768px) {
     .site-head__inner {
         flex-direction: column;
         align-items: center;
@@ -177,5 +179,14 @@ li a.active {
         display: flex;
         flex-direction: column;
         border:none;
+    }
+
+    #site-logo {
+        max-width: 100%; /* Ensure it doesn't stretch */
+    }
+
+    .site-head__brand img {
+        width: 100%;
+        height: auto;
     }
 }
